--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.8.3",
     "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
